fix(frontend): fix sidebar alignement
Issue ref: #5966 
PR ref: #6052

--- a/frontend/src/css/Sidebar.styl
+++ b/frontend/src/css/Sidebar.styl
@@ -63,7 +63,7 @@ spacingInsideMenu = 40px
       &.sidebar__item__inside_menu
         padding-inline-start spacingInsideMenu - borderWhenActive
       &.sidebar__item__space
-        padding-inline-start spacingInsideMenu + standardSpacing - borderWhenActive
+        padding-inline-start standardSpacing
       &.sidebar__search
         padding-inline-start textSpacing
     &__name
@@ -81,7 +81,7 @@ spacingInsideMenu = 40px
         padding-inline-start standardSpacing
     &__space
       display flex
-      padding-inline-start spacingInsideMenu + standardSpacing
+      padding-inline-start standardSpacing + borderWhenActive
       align-items center
       &__type
         padding-inline-start textSpacing
